--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,6 @@ endif ()
 
 # add subdirectories to the build
 add_subdirectory(uva263)
+add_subdirectory(uva514)
 add_subdirectory(uva10008)
 add_subdirectory(uva10954)
